# uriparseutil

./: .bumpversion.cfg  .clang-format  .clang-tidy  CMakeLists.txt  dev.ubuntu_18.04.Dockerfile  dev.ubuntu_20.04.Dockerfile  dev.ubuntu_22.04.Dockerfile  dev.ubuntu_24.04.Dockerfile  vcpkg.json
.devcontainer/: devcontainer.json
cmake/: config.cmake.in
inc/: version.h.in
include/: uriparseutil.h
src/: test.cpp  uriparseutil.cpp
test/: .clang-tidy  CMakeLists.txt
test/src/: main.cpp  main1.cpp  test.cpp
